--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "axios-retry": "^3.1.9",
     "core-js": "^3.6.5",
     "echarts": "^5.0.1",
     "element-ui": "^2.4.5",
